force-app/main/default/objects/Icon__mdt/Icon__mdt.object-meta.xml
<CustomObject>
    <label>Icon</label>
    <pluralLabel>Icons</pluralLabel>
</CustomObject>