force-app/main/default/objects/Icon__mdt/fields/Hover_Text__c.field-meta.xml
<CustomField>
    <fullName>Hover_Text__c</fullName>
    <description>The label a user will see when they hover their mouse over each icon displayed on a page.</description>
    <inlineHelpText>The label a user will see when they hover their mouse over each icon displayed on a page.</inlineHelpText>
    <label>Hover Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>