force-app/main/default/objects/Icon__mdt/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>The static resource file name. Examine the properties on the file to determine if the file ends in .png, .PNG, .jpg, etc. This is a case-sensitive value.</description>
    <inlineHelpText>The static resource file name. Examine the properties on the file to determine if the file ends in .png, .PNG, .jpg, etc. This is a case-sensitive value.</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>