force-app/main/default/objects/Icon__mdt/fields/Object_Types__c.field-meta.xml
<CustomField>
    <fullName>Object_Types__c</fullName>
    <description>Comma-separated list of objects that the icon should be available to, i.e. Account, Contact, Custom_Object__c, etc.</description>
    <inlineHelpText>Comma-separated list of objects that the icon should be available to, i.e. Account, Contact, Custom_Object__c, etc.</inlineHelpText>
    <label>Object Types</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>