force-app/main/default/objects/Icon__mdt/listViews/All_Icons.listView-meta.xml
<ListView>
    <fullName>All_Icons</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Image__c</columns>
    <columns>Hover_Text__c</columns>
    <columns>Object_Types__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Icons</label>
    <language>en_US</language>
</ListView>